--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@
 
 [[constraint]]
   name = "github.com/drausin/libri"
-  version = "0.2.0"
+  revision = "69264bc2196fa5cf6784bea38eeda5e1645f8078"
 
 [[constraint]]
   branch = "master"
