--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@
 
 [[constraint]]
   name = "github.com/drausin/libri"
-  version = "0.2.0"
+  revision = "df1347893b506c2eb64935347cf7c7a6ca928e9d"
 
 [[constraint]]
   branch = "master"
