--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: gcr.io/elxir-core-infra/service-base-build:latest
         auth:
           username: _json_key
-          password: ${GCR_SVC_JSON}
+          password: $GCR_SVC_JSON
     parallelism: 1
     working_directory: /go/src/github.com/elxirhealth/courier
     steps:
