--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,4 +31,5 @@ jobs:
             - /usr/local/lib/librocksdb.a
       - run: make build
       - run: make test
+      - run: make acceptance
       - run: make lint
