--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,23 +12,26 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-vendor-{{ arch }}-{{ checksum "Gopkg.lock" }}-rdb5.8
+            - arch={{ arch }}-vendor={{ checksum "Gopkg.lock" }}-rocksdb=5.8-v1
       - run: make get-deps
       - run:
           name: install RocksDB
           command: |
             # hack to make sure RocksDB runs on CircleCI machines
-            if [[ $(md5sum /usr/local/lib/librocksdb.a | awk '{print $1}') != "7e7ceeb24cedad568a97bad2e0793d2c" ]]; then
+            test -e /usr/local/lib/librocksdb.a && md5sum /usr/local/lib/librocksdb.a
+            if [[ $(md5sum /usr/local/lib/librocksdb.a | awk '{print $1}') != "5b839a7c9a487ae5235ebc810f4f9cef" ]]; then
               ./build/install-rocksdb.sh
             fi
       - run:
           name: install gorocksdb
           command: ./build/install-gorocksdb.sh
       - save_cache:
-          key: v1-vendor-{{ arch }}-{{ checksum "Gopkg.lock" }}-rdb5.8
+          key: arch={{ arch }}-vendor={{ checksum "Gopkg.lock" }}-rocksdb=5.8-v1
           paths:
             - vendor
+            - /usr/local/include/rocksdb
             - /usr/local/lib/librocksdb.a
       - run: make build
       - run: make test
+      - run: make acceptance
       - run: make lint
