add Dockerfile and build (#13)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,11 @@ jobs:
     working_directory: /go/src/github.com/elxirhealth/courier
     steps:
       - checkout
+      - setup_remote_docker
       - restore_cache:
           keys:
-            - arch={{ arch }}-vendor={{ checksum "Gopkg.lock" }}-rocksdb=5.8-v1
+            - arch={{ arch }}-rocksdb=5.8-vendor={{ checksum "Gopkg.lock" }}-v1
+            - arch={{ arch }}-rocksdb=5.8
       - run: make get-deps
       - run:
           name: install RocksDB
@@ -26,7 +28,7 @@ jobs:
           name: install gorocksdb
           command: ./build/install-gorocksdb.sh
       - save_cache:
-          key: arch={{ arch }}-vendor={{ checksum "Gopkg.lock" }}-rocksdb=5.8-v1
+          key: arch={{ arch }}-rocksdb=5.8-vendor={{ checksum "Gopkg.lock" }}-v1
           paths:
             - vendor
             - /usr/local/include/rocksdb
@@ -35,3 +37,5 @@ jobs:
       - run: make test
       - run: make acceptance
       - run: make lint
+      - run: make build-static
+      - run: make docker-image
