--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,9 @@ jobs:
             - /usr/local/include/rocksdb
             - /usr/local/lib/librocksdb.a
       - run: make build
-      - run: make test
-      - run: make acceptance
-      - run: make lint
       - run: make build-static
       - run: make docker-image
+      - run: make test
+      - run: make lint
+      - run: make acceptance
+      - run: make demo
