add docker image pub

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,17 @@ jobs:
       - run: make lint
       - run: make acceptance
       - run: make demo
+      - run:
+          name: publish docker image
+          command: |
+            if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
+              docker login -u _json_key -p "${GCR_SVC_JSON}" gcr.io
+              COURIER_VERSION=$(./deploy/bin/courier version)
+              docker tag gcr.io/elxir-core-infra/courier:snapshot gcr.io/elxir-core-infra/courier:${COURIER_VERSION}
+              docker tag gcr.io/elxir-core-infra/courier:snapshot gcr.io/elxir-core-infra/courier:latest
+              docker push gcr.io/elxir-core-infra/courier:${COURIER_VERSION}
+              docker push gcr.io/elxir-core-infra/courier:latest
+            elif [[ "${CIRCLE_BRANCH}" == "develop" ]]; then
+              docker login -u _json_key -p "${GCR_SVC_JSON}" gcr.io
+              docker push gcr.io/elxir-core-infra/courier:snapshot
+            fi
