try root user in build image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: gcr.io/elxir-core-infra/service-base-build:latest
+        user: root
         auth:
           username: _json_key
           password: $GCR_SVC_JSON
