--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
           username: _json_key
           password: $GCR_SVC_JSON
     parallelism: 1
-    working_directory: /go/src/github.com/elxirhealth/courier
+    working_directory: /go/src/github.com/elixirhealth/courier
     steps:
       - checkout
       - setup_remote_docker
